# rag-lab

./: .cursorrules-azure-functions  .env.example  .gitignore  .overmind  AGENTS.md  COMPONENT_REGISTRY.md  Makefile  README.md
backend/: .coverage  pyproject.toml  requirements.txt  validate_package_structure.py
backend/azure_functions/: .deployment  .funcignore  README.md  README_LOCAL.md  build.sh  host.json  local.settings.json  requirements.txt
backend/azure_functions/chunking-worker/: __init__.py
backend/azure_functions/embedding-worker/: __init__.py  function.json
backend/azure_functions/indexing-worker/: __init__.py  function.json
backend/azure_functions/ingestion-worker/: __init__.py  function.json
backend/backend/scripts/: set_function_app_env_vars.sh
backend/rag_eval/: __init__.py
backend/rag_eval/api/: __init__.py  main.py
backend/rag_eval/core/: __init__.py  config.py  exceptions.py  interfaces.py  logging.py
backend/rag_eval/db/: __init__.py  connection.py  documents.py  models.py  queries.py
backend/rag_eval/services/: __init__.py
backend/rag_eval/utils/: __init__.py  file.py  timing.py
backend/scripts/: TEST_SCRIPTS_REVIEW.md  check_document_chunks.py  clear_search_index.py  debug_extraction.py  get_azure_storage_connection.py  insert_rag_prompt.py  regenerate_previews.py  set_function_app_env_vars.sh  setup_azure_queues.py  test_azure_pages_parameter.py  test_azure_queues.py  test_batch_extraction.py  test_batch_page_ranges.py  test_e2e_upload.py  test_eval_judgments.py  test_extraction_chunking.py  test_meta_eval_summaries.py  test_query_pipeline.py  validate_prompt_migrations.py  verify_document_intelligence_tier.py  verify_phase5_migrations.py
backend/src/core/: exceptions.py
backend/src/db/: __init__.py  connection.py  documents.py  queries.py  (+1 more)
backend/tests/: conftest.py  test_query_endpoint.py  test_rag_e2e.py  test_rag_embeddings.py  test_rag_ingestion.py  test_rag_logging.py  test_rag_pipeline.py  test_rag_search.py  test_upload_endpoint.py
(+591 files in other folders)
