[project]
name = "rag-eval"
version = "0.1.0"
description = "RAG Evaluation Platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.11.7,<3.0.0",
    "psycopg2-binary>=2.9.9",
    "azure-ai-inference>=1.0.0b1",
    "azure-search-documents>=11.4.0",
    "azure-storage-blob>=12.19.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]  # Ensures pytest can find rag_eval package

